--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -263,6 +263,7 @@ config.llvm_cov = inferSwiftBinary('llvm-cov')
 config.filecheck = inferSwiftBinary('FileCheck')
 config.llvm_dwarfdump = inferSwiftBinary('llvm-dwarfdump')
 config.llvm_dis = inferSwiftBinary('llvm-dis')
+config.llvm_as = inferSwiftBinary('llvm-as')
 config.sourcekitd_test = inferSwiftBinary('sourcekitd-test')
 config.complete_test = inferSwiftBinary('complete-test')
 config.swift_api_digester = inferSwiftBinary('swift-api-digester')
@@ -356,6 +357,7 @@ config.substitutions.append( ('%llvm-link', config.llvm_link) )
 config.substitutions.append( ('%swift-llvm-opt', config.swift_llvm_opt) )
 config.substitutions.append( ('%llvm-dwarfdump', config.llvm_dwarfdump) )
 config.substitutions.append( ('%llvm-dis', config.llvm_dis) )
+config.substitutions.append( ('%llvm-as', config.llvm_as) )
 
 # This must come after all substitutions containing "%swift".
 config.substitutions.append(
@@ -429,6 +431,7 @@ disallow('clang')
 disallow('FileCheck')
 disallow('llvm-dwarfdump')
 disallow('llvm-dis')
+disallow('llvm-as')
 
 config.substitutions.insert(0,
     ('%p',
