--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -264,6 +264,7 @@ config.filecheck = inferSwiftBinary('FileCheck')
 config.llvm_dwarfdump = inferSwiftBinary('llvm-dwarfdump')
 config.llvm_dis = inferSwiftBinary('llvm-dis')
 config.llvm_as = inferSwiftBinary('llvm-as')
+config.llvm_objdump = inferSwiftBinary('llvm-objdump')
 config.sourcekitd_test = inferSwiftBinary('sourcekitd-test')
 config.complete_test = inferSwiftBinary('complete-test')
 config.swift_api_digester = inferSwiftBinary('swift-api-digester')
@@ -358,6 +359,7 @@ config.substitutions.append( ('%swift-llvm-opt', config.swift_llvm_opt) )
 config.substitutions.append( ('%llvm-dwarfdump', config.llvm_dwarfdump) )
 config.substitutions.append( ('%llvm-dis', config.llvm_dis) )
 config.substitutions.append( ('%llvm-as', config.llvm_as) )
+config.substitutions.append( ('%llvm-objdump', config.llvm_objdump) )
 
 # This must come after all substitutions containing "%swift".
 config.substitutions.append(
@@ -432,6 +434,7 @@ disallow('FileCheck')
 disallow('llvm-dwarfdump')
 disallow('llvm-dis')
 disallow('llvm-as')
+disallow('llvm-objdump')
 
 config.substitutions.insert(0,
     ('%p',
